--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1814,6 +1814,10 @@
   width: 100%;
   height: 609px;
 }
+#venue .map_title{
+  padding: 60px 0 30px 0;
+  justify-content: center;
+}
 .btn_link {
   position: relative;
   width: 100%;
